--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "to-do",
+  "name": "lottery",
   "version": "1.0.0",
-  "description": "",
+  "description": "This a lottery smart contract, a project built at Web3Bridge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "dotenv": "^16.0.1",
-    "ethers": "^5.7.0",
+  "keywords": [
+    "ethereum",
+    "eth",
+    "lottery",
+    "smart-contract"
+  ],
+  "author": "abiodun",
+  "license": "MIT",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "hardhat": "^2.10.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
