--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "lottery",
+  "name": "votting_contract",
   "version": "1.0.0",
-  "description": "This a lottery smart contract, a project built at Web3Bridge",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "ethereum",
-    "eth",
-    "lottery",
-    "smart-contract"
-  ],
-  "author": "abiodun",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@openzeppelin/contracts": "^4.6.0"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.2"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.1"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.1"
   }
 }
